yml/apache2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      name: apache
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: docker.io/jingom368/apache2_mboard:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: mboard-secret

---
apiVersion: v1
kind: Service
metadata:
  name: apache-service
spec:
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30001
  selector:
    app: apache
  type: NodePort
