yml/mariadb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      name: mariadb
      labels:
        app: mariadb
    spec:
      volumes:
      - name: mariadb-data
        hostPath: 
          path: /home/xavier/volume/mariadb
      containers:
      - name: mariadb
        image: docker.io/redleon1/mariadb_mboard:1.0
        imagePullPolicy: Always
        volumeMounts:
        - name: mariadb-data
          mountPath: /var/lib/mysql
        ports:
        - containerPort: 3306
      imagePullSecrets:
      - name: mboard-secret

---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
spec:
  ports:
  - port: 3306
    targetPort: 3306
    nodePort: 30003
  selector:
    app: mariadb
  type: NodePort
