yml/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mboard-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: www.mboard.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: apache-service
                port:
                  number: 80
